# sqlpp11-connector-odbc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sqlpp11-connector-odbc.kdev4  version.h.in
CMake/: FindODBC.cmake  SetVersion.cmake  Sqlpp11ConnectorODBCConfig.cmake
CMake/Modules/: FindODBC.cmake
include/sqlpp11/odbc/: bind_result.h  connection.h  connection_config.h  insert_or.h  odbc.h  prepared_statement.h  serializer.h
src/: CMakeLists.txt  bind_result.cpp  connection.cpp  prepared_statement.cpp
src/detail/: connection_handle.cpp  connection_handle.h  prepared_statement_handle.h
tests/: CMakeLists.txt  ODBCTest.cpp  TabSample.h
